# junks

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  Vagrantfile
docs/: DATA_MODEL.md  POINTS.md
elixir/: Makefile  README.md  mix.exs
elixir/assets/static/konsoul/: konsoul.css  konsoul.css.map
elixir/assets/static/materialize/: junks.css
elixir/assets/static/react/: asset-manifest.json  precache-manifest.98f552c61fd5a4986e7ed75979e3cd87.js  service-worker.js
elixir/config/: .gitignore  config.exs  dev.exs  keys_example.exs  prod.exs  test.exs
elixir/doc/: .build  404.html  Junks.Auth.Group.html  Junks.Auth.User.html  Junks.Auth.UserGroup.html  Junks.Auth.html  Junks.Content.Note.html  Junks.Content.NoteTag.html  Junks.Content.Tag.html  Junks.Content.html  Junks.Util.html  JunksWeb.Api.UserController.html  JunksWeb.Api.UserView.html  JunksWeb.ErrorHelpers.html  JunksWeb.ErrorView.html  JunksWeb.LayoutView.html  JunksWeb.PageController.html  JunksWeb.PageView.html  JunksWeb.Router.Helpers.html  api-reference.html  index.html  search.html
elixir/lib/: junks.ex  junks_web.ex
elixir/lib/junks/: application.ex  errors.ex  mailer.ex  release_tasks.ex  repo.ex  util.ex
elixir/lib/junks/auth/: auth.ex  group.ex  reset_token.ex  user.ex  user_group.ex
elixir/lib/junks/content/: content.ex  note.ex  note_tag.ex  tag.ex
elixir/lib/junks_web/: endpoint.ex  gettext.ex  helpers.ex  router.ex
elixir/lib/junks_web/controllers/: page_controller.ex
elixir/lib/junks_web/views/: error_helpers.ex  (+3 more)
elixir/priv/repo/: seeds.exs
elixir/rel/: config.exs
elixir/rel/commands/: migrate.sh  seed.sh
elixir/test/: test_helper.exs
elixir/test/junks/: mailer_test.exs
elixir/test/support/: channel_case.ex  conn_case.ex  data_case.ex
konsoul/: Makefile
konsoul/sass/: main.scss
konsoul/sass/components/: _button.scss  _colors.scss  _html.scss  _variables.scss
markdown-editor/: Makefile
material-icons/: Makefile  material-icons.css
materialize/: Makefile
materialize/css/: junks.css.map
materialize/sass/: materialize.scss
materialize/sass/components/: _animations.scss  _badges.scss  _buttons.scss  _carousel.scss  _chips.scss  _collapsible.scss  _datepicker.scss  _global.scss  _markdown.scss  _materialbox.scss  _navbar.scss  _pipify.scss  _sidenav.scss  _slider.scss  _tabs.scss  _tapTarget.scss  _tooltip.scss  _typography.scss  _variables.scss
react-web/: Makefile  README.md  package-lock.json  package.json
react-web/public/: index.html
react-web/src/: Routes.js  index.js
react-web/src/app/: App.js
react-web/src/components/: NavBar.js  root.js
react-web/src/pages/: Login.js
reflex-dom/: .gitignore  Makefile  README.md  cabal-ghcjs.project  cabal.project  default.nix  junks-frontend.cabal
reflex-dom/app/: Main.hs
reflex-dom/make-helpers/: copy-artifacts.sh
reflex-dom/nix/: nixpkgs-17.09.json  nixpkgs-unstable.json  nixpkgs.nix  reflex-platform.json  reflex-platform.nix
reflex-dom/src/: Auth.hs  Group.hs  Layout.hs  Nav.hs  Note.hs
reflex-dom/src/Api/: Routes.hs  Xhr.hs
reflex-dom/src/CGX/: Prelude.hs
reflex-dom/src/Models/: Auth.hs  Content.hs  Errors.hs  Lenses.hs  Types.hs
reflex-dom/src/Support/: Legos.hs  Routes.hs  Session.hs  Util.hs
reflex-dom/src/Support/Dom/: FFI.hs  Inputs.hs  Markdown.hs
reflex-dom/src/Support/Legos/: Button.hs  Flash.hs  Form.hs  JQuery.hs  Materialize.hs  Router.hs  Types.hs
reflex-dom/src/Support/Legos/Materialize/: Button.hs  Container.hs  Form.hs  Icon.hs  Loader.hs  Types.hs
reflex-dom/src/Support/Legos/Router/: AppState.hs
root-assets/: Makefile
vagrant/: core.sh  install-nix.sh  nix.conf
(+65 files in other folders)
